; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_moduli.c_fmt_time.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_moduli.c_fmt_time.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@fmt_time.buf = internal global [128 x i8] zeroinitializer, align 16
@.str = private unnamed_addr constant [12 x i8] c"%dd %d:%02d\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"%d:%02d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @fmt_time to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @fmt_time(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %6 = load i32, i32* %2, align 4
  %7 = sdiv i32 %6, 60
  %8 = srem i32 %7, 60
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %2, align 4
  %10 = sdiv i32 %9, 60
  %11 = sdiv i32 %10, 60
  %12 = srem i32 %11, 24
  store i32 %12, i32* %4, align 4
  %13 = load i32, i32* %2, align 4
  %14 = sdiv i32 %13, 60
  %15 = sdiv i32 %14, 60
  %16 = sdiv i32 %15, 24
  store i32 %16, i32* %3, align 4
  %17 = load i32, i32* %3, align 4
  %18 = icmp sgt i32 %17, 0
  br i1 %18, label %19, label %24

19:                                               ; preds = %1
  %20 = load i32, i32* %3, align 4
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* %5, align 4
  %23 = call i32 (i8*, i32, i8*, i32, i32, ...) @snprintf(i8* getelementptr inbounds ([128 x i8], [128 x i8]* @fmt_time.buf, i64 0, i64 0), i32 128, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i32 %20, i32 %21, i32 %22)
  br label %28

24:                                               ; preds = %1
  %25 = load i32, i32* %4, align 4
  %26 = load i32, i32* %5, align 4
  %27 = call i32 (i8*, i32, i8*, i32, i32, ...) @snprintf(i8* getelementptr inbounds ([128 x i8], [128 x i8]* @fmt_time.buf, i64 0, i64 0), i32 128, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i32 %25, i32 %26)
  br label %28

28:                                               ; preds = %24, %19
  ret i8* getelementptr inbounds ([128 x i8], [128 x i8]* @fmt_time.buf, i64 0, i64 0)
}

declare dso_local i32 @snprintf(i8*, i32, i8*, i32, i32, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
